--- a/exercises/01-Basic.ipynb
+++ b/exercises/01-Basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": "# 01-Beginner: Pandas essentials\nFor these exercises, we are going to be using the [Pandas](https://pandas.pydata.org/about/) Python package, so the first thing to do is to import Pandas. To do this, click on the code block below and press the 'Run' button to the left.",
+   "source": "# 01-Basic: Pandas essentials\nFor these exercises, we are going to be using the [Pandas](https://pandas.pydata.org/about/) Python package, so the first thing to do is to import Pandas. To do this, click on the code block below and press the 'Run' button to the left.",
    "metadata": {
     "tags": [],
     "cell_id": "00000-cd14a2b9-8a6f-4690-9457-5f5995338df6",
@@ -15,14 +15,14 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "9b82ee11",
-    "execution_start": 1633451844389,
-    "execution_millis": 7,
+    "execution_start": 1633510501425,
+    "execution_millis": 58657026,
     "cell_id": "00001-9463a7e8-ef49-4d86-a3fe-9348137f44b6",
     "deepnote_cell_type": "code"
    },
    "source": "import pandas as pd",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 1,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -39,12 +39,13 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "459b66d0",
-    "execution_start": 1633451844402,
-    "execution_millis": 49,
+    "execution_start": 1633510501468,
+    "execution_millis": 12,
     "cell_id": "00003-59fe9947-e87c-4b18-930a-f0ea44c1def7",
     "deepnote_cell_type": "code"
    },
    "source": "df_test = pd.DataFrame(data=[['1',2,3.0],[4,'5',6],[0.07,88.0,999]],columns=['A','B','C'])\ndf_test.head()",
+   "execution_count": 2,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -192,8 +193,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,14 +219,14 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "93a6ce11",
-    "execution_start": 1633451844444,
-    "execution_millis": 1,
+    "execution_start": 1633510501470,
+    "execution_millis": 65,
     "cell_id": "00006-67536e63-1e63-420e-a63f-e498cb14682c",
     "deepnote_cell_type": "code"
    },
    "source": "df_test.to_csv('./test.csv')",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 3,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -244,13 +244,13 @@
     "cell_id": "00008-b8617cee-ecb8-4827-9d45-cea4901e50d0",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "3b0213f1",
-    "execution_start": 1633451844445,
-    "execution_millis": 44,
+    "execution_start": 1633510501536,
+    "execution_millis": 1,
     "deepnote_cell_type": "code"
    },
    "source": "df_test.to_csv('../test_parent.csv')\ndf_test.to_csv('../data/test_sibling.csv')",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 4,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -267,14 +267,14 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "95261650",
-    "execution_start": 1633451844489,
-    "execution_millis": 2017,
+    "execution_start": 1633510501538,
+    "execution_millis": 805,
     "cell_id": "00010-3eaf395d-cd3e-4f5d-83ba-364159146ab4",
     "deepnote_cell_type": "code"
    },
    "source": "!rm ./test.csv\n!rm ../test_parent.csv\n!rm ../data/test_sibling.csv",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 5,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -300,12 +300,13 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f61d5314",
-    "execution_start": 1633451846512,
-    "execution_millis": 427,
+    "execution_start": 1633510502351,
+    "execution_millis": 414,
     "cell_id": "00013-571dca19-a769-456c-b286-7d77ebcac8c6",
     "deepnote_cell_type": "code"
    },
    "source": "import pandas as pd\ndf_listings = pd.read_csv('../data/listings_sample.csv', \n    usecols=['host_id','id','name','room_type','price'])\ndf_listings.head()",
+   "execution_count": 6,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -555,8 +556,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -582,12 +582,13 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "b56348a0",
-    "execution_start": 1633451846956,
-    "execution_millis": 55,
+    "execution_start": 1633510502761,
+    "execution_millis": 121,
     "cell_id": "00016-c5cb6122-2dc8-491d-968b-c5501ed13917",
     "deepnote_cell_type": "code"
    },
    "source": "# (SOLUTION) Delete in public branch\ndf_hosts = pd.read_csv('../data/hosts_sample.csv', usecols=['id','host_name','host_since'])\ndf_hosts.head()",
+   "execution_count": 7,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -747,8 +748,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -766,11 +766,12 @@
     "cell_id": "00018-b902f5e6-c807-4210-93c4-fbc21da15e2e",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "ee385073",
-    "execution_start": 1633451846999,
-    "execution_millis": 12,
+    "execution_start": 1633510502878,
+    "execution_millis": 52,
     "deepnote_cell_type": "code"
    },
    "source": "df_hosts[df_hosts['host_since'].isna()].head()",
+   "execution_count": 8,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -914,8 +915,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -928,24 +928,24 @@
   },
   {
    "cell_type": "code",
-   "source": "df_hosts = df_hosts[~df_hosts['host_since'].isna()]\nprint(sum(df_hosts['host_since'].isna())) # Explain this check!",
    "metadata": {
     "tags": [],
     "cell_id": "00020-f547c317-f2f7-4e97-9c01-dd168d9799b3",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "7cbe1922",
-    "execution_start": 1633451847006,
-    "execution_millis": 13,
+    "execution_start": 1633510502940,
+    "execution_millis": 58655929,
     "deepnote_cell_type": "code"
    },
+   "source": "df_hosts = df_hosts[~df_hosts['host_since'].isna()]\nprint(sum(df_hosts['host_since'].isna())) # Explain this check!",
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "text": "0\n",
      "output_type": "stream"
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -958,16 +958,17 @@
   },
   {
    "cell_type": "code",
-   "source": "def host_years_old(host_since):\n    return(2021 - int(host_since.split('-')[0]))\n\ndf_hosts['host_years_old'] = df_hosts['host_since'].apply(host_years_old)\ndf_hosts.head()",
    "metadata": {
     "tags": [],
     "cell_id": "00022-d3276a55-3115-41e2-bce4-e9e0f988c1ed",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "1378444b",
-    "execution_start": 1633451847049,
-    "execution_millis": 68,
+    "execution_start": 1633510502999,
+    "execution_millis": 57,
     "deepnote_cell_type": "code"
    },
+   "source": "def host_years_old(host_since):\n    return(2021 - int(host_since.split('-')[0]))\n\ndf_hosts['host_years_old'] = df_hosts['host_since'].apply(host_years_old)\ndf_hosts.head()",
+   "execution_count": 10,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1194,8 +1195,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1212,12 +1212,13 @@
     "tags": [],
     "deepnote_to_be_reexecuted": false,
     "source_hash": "1c897ce6",
-    "execution_start": 1633451847094,
-    "execution_millis": 35,
+    "execution_start": 1633510503047,
+    "execution_millis": 45,
     "cell_id": "00020-eb9fe918-0a82-4f1c-9183-0d6f25a07955",
     "deepnote_cell_type": "code"
    },
    "source": "def format_price(price):\n    return(float(price.replace('$','').replace(',','')))\n\n# (SOLUTION) Delete in public branch\ndf_listings['price_$'] = df_listings['price'].apply(format_price) \ndf_listings[['price','price_$']].head()",
+   "execution_count": 11,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1350,8 +1351,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1364,16 +1364,17 @@
   },
   {
    "cell_type": "code",
-   "source": "df_hosts_ancient = df_hosts[df_hosts['host_years_old']>10]\ndf_hosts_ancient.head()",
    "metadata": {
     "tags": [],
     "cell_id": "00026-c0b9c5ce-e0a4-49b7-9a13-c6b75d6e5b28",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "afe22a14",
-    "execution_start": 1633451847103,
-    "execution_millis": 26,
+    "execution_start": 1633510503088,
+    "execution_millis": 53,
     "deepnote_cell_type": "code"
    },
+   "source": "df_hosts_ancient = df_hosts[df_hosts['host_years_old']>10]\ndf_hosts_ancient.head()",
+   "execution_count": 12,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1600,8 +1601,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1619,11 +1619,12 @@
     "cell_id": "00024-86121000-3e44-4f2d-b36d-b3829e4eeac3",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "fd218a0c",
-    "execution_start": 1633451847145,
-    "execution_millis": 9,
+    "execution_start": 1633510503133,
+    "execution_millis": 52,
     "deepnote_cell_type": "code"
    },
    "source": "# (SOLUTION) Delete in public branch\ndf_listings_budget = df_listings[df_listings['price_$']<100]\ndf_listings_budget.head()",
+   "execution_count": 13,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1940,8 +1941,16 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": null
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Inspect the code\nHave a play around with above code. If the notebooks breaks, then just restart it.\n\nWhen you feel confident with the code in this notebook, then try `02-Advanced.ipynb`.",
+   "metadata": {
+    "tags": [],
+    "cell_id": "00029-f279bf61-891f-4f0a-8593-afbe6921d5f7",
+    "deepnote_cell_type": "markdown"
+   }
   },
   {
    "cell_type": "markdown",
